--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -44,8 +44,8 @@
                         {{ form.description(class="form-control", placeholder="Description") }}
                         {{ form.description.label }}
                     </div>
-                    {{ form.url_for_files(value="%s" | format(url_for('files'))) }}
                     {{ form.url_for_sign_s3(value="%s" | format(url_for('sign_s3'))) }}
+                    {{ form.url_for_delete_s3(value="%s" | format(url_for('delete_s3'))) }}
                     {{ form.collection(value="projects") }}
                     {{ form.photo_list() }}
                     <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
