--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -49,26 +49,21 @@
                     <div class="card-body row justify-content-center g-2">
                         <label for="current-photo">Current Photos:</label>
                         <div id="gallery" class="row">
-                            {% if post.photos|length %}
-                                {% set photos = post.photos.split(',') %}
-                                {% for photo in photos %}
-                                    <div class="photo-container col-sm-4 col-md-6 col-lg-4">
-                                        <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                            class="{{ post.slug }}-gallery">
-                                            <img class="img-thumbnail gallery-item"
-                                                src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                            {% for photo in post.photos %}
+                                <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                    <a href="{{ photo }}"
+                                            class="blogs-gallery">
+                                        <img class="img-thumbnail gallery-item"
+                                                src="{{ photo }}"
                                                 alt="Photo {{ loop.index }}">
-                                        </a>
-                                        <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                    </a>
+                                    <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
                                             <i class="bi bi-trash-fill"></i>
-                                        </a>
-                                    </div>
-                                {% endfor %}
-                            {% endif %}
+                                    </a>
+                                </div>
+                            {% endfor %}
                         </div>
                         <div class="mb-3">
-                            <input type="hidden" id="url-for-signs3" value="{{ url_for('sign_s3')}}">
-                            <input type="hidden" id="url-for-deletes3" value="{{ url_for('delete_s3')}}">
                             <input type="hidden" id="collection" value="blogs">
                             <input type="hidden" id="doc-id" value="{{ post._id }}">
                             <label for="drop-area" class="form-label">New Photo</label>
