--- a/templates/admin/settings.html
+++ b/templates/admin/settings.html
@@ -82,7 +82,7 @@
                         <label for="current-photo">Current Photo:</label>
                         <div id="gallery" class="row">
                             {% if settings.photos|length %}
-                                <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ settings.photos[0] }}">
                                     <a href="{{ settings.photos[0] }}" class="settings-gallery">
                                         <img class="img-thumbnail gallery-item"
                                             src="{{ settings.photos[0] }}"
