--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -35,6 +35,7 @@
         const urlForSignS3 = "{{ url_for('sign_s3') }}";
         const urlForDeleteS3 = "{{ url_for('delete_s3') }}";
         const urlForAddPhoto = "{{ url_for('add_photo') }}";
+        const urlForDeletePhoto = "{{ url_for('delete_photo') }}";
     </script>
 </head>
 
