--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -22,7 +22,7 @@
     <!-- flash messages -->
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-            <div class="toast-container position-absolute top-0 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+            <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
                 {% for category, message in messages %}
                     <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
                         <span class="m-auto px-2">
