--- a/templates/blog.html
+++ b/templates/blog.html
@@ -37,9 +37,8 @@
                         <div class="card card-blogs">
                             <div class="row">
                                 {% if blog.photos|length %}
-                                    {% set photos = blog.photos.split(',') %}
                                     <div class="col-12 col-md-4 text-center">
-                                        <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                                        <img src="{{ blog.photos[0] }}"
                                             alt="{{ blog.title }}" class="img-fluid">
                                     </div>
                                     <div class="card-blogs-body col-12 col-md-8">
