--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,7 +32,7 @@
                             {% if session['user'] %}
                                 <a href="{{ url_for('get_settings') }}" class="btn btn-light position-absolute top-0 end-0 mt-2 mx-2"><i class="bi bi-pencil"></i></a>
                             {% endif %}
-                            <img src="{{ url_for('uploads', filename=settings.photos.replace(' ', '')) }}"
+                            <img src="{{ settings.photos[0] }}"
                                 class="mb-3 w-50" alt="{{ settings.name }}">
                             <h4 class="card-title">Contact Info</h4>
                             <p class="card-text">
