--- a/templates/project.html
+++ b/templates/project.html
@@ -7,7 +7,6 @@
 {% endblock styles %}
 
 {% block content %}
-    {% set photos = project.photos.split(',') %}
     <!-- Project Details SECTION -->
     <section id="project-details">
         <div class="page-title-container bg-accent">
@@ -44,9 +43,9 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <figure>
-                        <a href="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                        <a href="{{ project.photos[0] }}"
                             class="{{ project.slug }}-gallery">
-                            <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                            <img src="{{ project.photos[0] }}"
                                 alt="{{ project.title }}" class="project-main-photo gallery-item">
                         </a>
                     </figure>
@@ -105,13 +104,13 @@
             <div class="container-xl">
                 <h2 class="section-title text-shadow">Gallery</h2>
                 <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 mb-4" data-masonry='{"percentPosition": true }'>
-                    {% for photo in photos %}
+                    {% for photo in project.photos %}
                         {% if loop.index0 > 0 %}
                             <div class="col">
                                 <figure>
-                                    <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                    <a href="{{ photo }}"
                                         class="{{ project.slug }}-gallery"><img
-                                            src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                            src="{{ photo }}"
                                             alt="Photo {{ loop.index }}" class="gallery-item"></a>
                                 </figure>
                             </div>
