--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,38 @@ section:last-of-type {
     margin: 0;
 }
 
+#spinner {
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    z-index: 99999;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+#spin-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .2);
+    z-index: 9998;
+}
+
+#spin-overlay-contain {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, .5);
+    z-index: 9998;
+}
+
 /*------------------------------------------ TYPOGRAPHY */
 
 h1, h2, h3, h4, h5 {
