--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!-- CREDIT: https://bootsnipp.com/snippets/A2kpB -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[Dev.PI] {{ subject }}</title>
     <style type="text/css">
       body {
-        padding: 0;
+        padding: 16px 0 32px 0;
         margin: 0;
         background-color: #edece8;
       }
@@ -38,12 +37,6 @@
   <body>
 
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="min-width: 320px;">
-      <tr>
-        <td>
-          <!-- padding -->
-          <div style="height: 32px; line-height: 32px;"></div>
-        </td>
-      </tr>
       <tr>
         <td align="center" bgcolor="#edece8">
 
@@ -93,7 +86,8 @@
                               <font face="Arial, Helvetica, sans-serif" size="5" color="#023060" style="font-size: 24px;">
                                 <span style="font-family: Arial, Helvetica, sans-serif; font-size: 24px; color: #023060e;">
                                   {{ subject }}
-                                </span></font>
+                                </span>
+                              </font>
                             </div>
                             <!-- padding -->
                             <div style="height: 40px; line-height: 40px; font-size: 10px;"></div>
@@ -105,7 +99,8 @@
                               <font face="Arial, Helvetica, sans-serif" size="4" color="#57697e" style="font-size: 15px;">
                                 <span style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #57697e;">
                                   {{ message }}
-                                </span></font>
+                                </span>
+                              </font>
                             </div>
                             <!-- padding -->
                             <div style="height: 40px; line-height: 40px; font-size: 10px;"></div>
@@ -129,12 +124,6 @@
               </td>
             </tr>
           </table>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <!-- padding -->
-          <div style="height: 32px; line-height: 32px;"></div>
         </td>
       </tr>
     </table>
