--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -21,24 +21,24 @@
 <body class="body-login text-center">
     <!-- flash messages -->
     {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
-                {% for category, message in messages %}
-                    <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
-                        <span class="m-auto px-2">
-                            <i class="bi bi-bell-fill"></i>
-                        </span>
-                        <div class="toast-body">
-                            <h4>{{ message }}</h4>
-                        </div>
-                        <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i class="bi bi-x-circle"></i></a>
-                    </div>
-                {% endfor %}
+    {% if messages %}
+    <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+        {% for category, message in messages %}
+        <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
+            <span class="m-auto px-2">
+                <i class="bi bi-bell-fill"></i>
+            </span>
+            <div class="toast-body">
+                <h4>{{ message }}</h4>
             </div>
-        {% endif %}
+            <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i class="bi bi-x-circle"></i></a>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
     {% endwith %}
     <main class="form-signin">
-        <form method="POST" action="{{ url_for('login') }}">
+        <form method="POST">
             {{ form.csrf_token }}
             <h1 class="text-center">{&pi;}</h1>
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
