fix: update db find functions for settings to work with id 1

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -377,10 +377,14 @@ nav[aria-label="breadcrumb"] {
     color: var(--text-light);
 }
 
-.hero .hero-img {
-    border-radius: 50%;
+.hero-img {
+    display: block;
+    width: 100%;
+    padding-top: 100%;
     border: 2px solid var(--text-light);
     box-shadow: 2px 3px 4px rgb(0, 0, 0, .4);
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .hero .hero-title {
