--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,17 @@
+{% set photo = 'it worked' %}
 {% extends "base.html" %}
 {% block styles %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+    <style>
+        .hero-img {
+            {% if settings.photos|length %}
+                background: url('{{ settings.photos[0] }}');
+            {% else %}
+                background: url('{{ url_for('static', filename='images/no-photo.jpg') }}');
+            {% endif %}
+            background-size: cover;
+        }
+    </style>
 {% endblock styles %}
 {% block content %}
     <!-- HERO SECTION -->
@@ -10,13 +21,10 @@
                 <div class="col-8 col-sm-6 col-md-5 col-lg-4">
                     {% if settings.photos|length %}
                         <a href="{{ settings.photos[0] }}"
-                                class="gallery">
-                            <img src="{{ settings.photos[0] }}"
-                                    alt="{{ settings.name }} - {{ settings.title }}" class="hero-img d-block mx-lg-auto img-fluid gallery-item">
+                                class="hero-img gallery">
                         </a>
                     {% else %}
-                        <img src="{{ url_for('static', filename='images/no-photo.jpg') }}"
-                                    alt="{{ settings.name }} - {{ settings.title }}" class="hero-img d-block mx-lg-auto img-fluid gallery-item">
+                        <div class="hero-img"></div>
                     {% endif %}
                 </div>
                 <div class="col-12 col-md-7 col-lg-8">
