--- a/templates/project.html
+++ b/templates/project.html
@@ -43,11 +43,16 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <figure>
-                        <a href="{{ project.photos[0] }}"
-                            class="{{ project.slug }}-gallery">
-                            <img src="{{ project.photos[0] }}"
-                                alt="{{ project.title }}" class="project-main-photo gallery-item">
-                        </a>
+                        {% if project.photos|length %}
+                            <a href="{{ project.photos[0] }}"
+                                class="{{ project.slug }}-gallery">
+                                <img src="{{ project.photos[0] }}"
+                                    alt="{{ project.title }}" class="project-main-photo gallery-item">
+                            </a>
+                        {% else %}
+                            <img src="{{ url_for('static', filename='images/no-photo.jpg') }}"
+                                    alt="{{ project.title }}" class="project-main-photo gallery-item">
+                        {% endif %}
                     </figure>
                 </div>
                 <div class="col-12 col-md-6">
@@ -79,7 +84,7 @@
                     <p>{{ project.description }}</p>
                 </div>
             </div>
-            {% if photos|length <= 1 %}
+            {% if project.photos|length <= 1 %}
                 <div class="row">
                     <div class="col">
                         <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i class="bi bi-arrow-left-circle"></i> Go
@@ -89,7 +94,7 @@
             {% endif %}
         </div>
     </section>
-    {% if photos|length > 1 %}
+    {% if project.photos|length > 1 %}
         <section id="project-gallery">
             <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
             <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
