docs(deployment): update deployment section of README

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,6 +86,11 @@ section:last-of-type {
     z-index: 9998;
 }
 
+.modal-body {
+    padding: 2rem;
+    text-indent: 1.5rem;
+}
+
 /*------------------------------------------ TYPOGRAPHY */
 
 h1, h2, h3, h4, h5 {
