--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,6 +10,7 @@
                 background: url('{{ url_for('static', filename='images/no-photo.jpg') }}');
             {% endif %}
             background-size: cover;
+            background-position: center;
         }
     </style>
 {% endblock styles %}
