--- a/templates/admin/blogs.html
+++ b/templates/admin/blogs.html
@@ -17,41 +17,47 @@
                     data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a>
             </div>
         </div>
-        <div class="card">
-            <div class="card-header text-center">
-                <h4 class="text-center">List</h4>
+        {% if blogs|length %}
+            <div class="card">
+                <div class="card-header text-center">
+                    <h4 class="text-center">List</h4>
+                </div>
+                <ul class="list-group list-group-flush">
+                    {% for blog in blogs %}
+                        <li class="list-group-item d-flex justify-content-between">
+                            <div class="row w-100 align-items-center">
+                                <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
+                                    {% if blog.photos|length %}
+                                        <img src="{{ blog.photos[0] }}" alt="{{ blog.title }}"
+                                            class="img-fluid">
+                                    {% else %}
+                                        <i class="bi bi-blockquote-left fs-1"></i>
+                                    {% endif %}
+                                </div>
+                                <div class="col-12 col-sm-10">
+                                    <h3 class="text-start">{{ blog.title }}</h3>
+                                    <span class="fst-italic">{{ blog.slug }}</span>
+                                    <small class="text-muted">{{ blog.added_on }}</small>
+                                    <p class="pt-2 fw-light">{{ blog.body|safe }}</p>
+                                </div>
+                            </div>
+                            <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
+                                <a href="{{ url_for('get_post', post=blog.slug) }}" class="btn btn-sm btn-accent"><i
+                                        class="bi bi-eye-fill"></i></a>
+                                <a href="{{ url_for('edit_blog', id=blog._id) }}" class="btn btn-sm btn-light"><i
+                                        class="bi bi-pencil"></i></a>
+                                <a href="{{ url_for('delete_blog', id=blog._id) }}" class="btn btn-sm btn-danger confirm"><i
+                                        class="bi bi-trash"></i></a>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <div class="card-footer"></div>
             </div>
-            <ul class="list-group list-group-flush">
-                {% for blog in blogs %}
-                    <li class="list-group-item d-flex justify-content-between">
-                        <div class="row w-100 align-items-center">
-                            <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
-                                {% if blog.photos|length %}
-                                    <img src="{{ blog.photos[0] }}" alt="{{ blog.title }}"
-                                        class="img-fluid">
-                                {% else %}
-                                    <i class="bi bi-blockquote-left fs-1"></i>
-                                {% endif %}
-                            </div>
-                            <div class="col-12 col-sm-10">
-                                <h3 class="text-start">{{ blog.title }}</h3>
-                                <span class="fst-italic">{{ blog.slug }}</span>
-                                <small class="text-muted">{{ blog.added_on }}</small>
-                                <p class="pt-2 fw-light">{{ blog.body|safe }}</p>
-                            </div>
-                        </div>
-                        <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
-                            <a href="{{ url_for('get_post', post=blog.slug) }}" class="btn btn-sm btn-accent"><i
-                                    class="bi bi-eye-fill"></i></a>
-                            <a href="{{ url_for('edit_blog', id=blog._id) }}" class="btn btn-sm btn-light"><i
-                                    class="bi bi-pencil"></i></a>
-                            <a href="{{ url_for('delete_blog', id=blog._id) }}" class="btn btn-sm btn-danger confirm"><i
-                                    class="bi bi-trash"></i></a>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
-            <div class="card-footer"></div>
-        </div>
+        {% else %}
+            <div class="col">
+                {% include "inc/no-results.html" %}
+            </div>
+        {% endif %}
     </section>
 {% endblock content %}
