--- a/templates/admin/edit_education.html
+++ b/templates/admin/edit_education.html
@@ -9,43 +9,49 @@
                 <img src="{{ url_for('static', filename='images/school.svg') }}" alt="School" class="section-image">
             </div>
         </div>
-        <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <form action="{{ url_for('edit_education', id=school._id) }}" method="POST">
-                {{ form.csrf_token }}
-                <div class="card-header">
-                    <h4 class="text-center">Edit</h4>
-                </div>
-                <div class="card-body">
-                    <div class="form-floating mb-3">
-                        {{ form.school(class="form-control", value="%s" | format(school.school)) }}
-                        {{ form.school.label }}
+        {% if school %}
+            <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+                <form action="{{ url_for('edit_education', id=school._id) }}" method="POST">
+                    {{ form.csrf_token }}
+                    <div class="card-header">
+                        <h4 class="text-center">Edit</h4>
                     </div>
-                    <div class="form-floating mb-3">
-                        {{ form.period(class="form-control", value="%s" | format(school.period)) }}
-                        {{ form.period.label }}
+                    <div class="card-body">
+                        <div class="form-floating mb-3">
+                            {{ form.school(class="form-control", value="%s" | format(school.school)) }}
+                            {{ form.school.label }}
+                        </div>
+                        <div class="form-floating mb-3">
+                            {{ form.period(class="form-control", value="%s" | format(school.period)) }}
+                            {{ form.period.label }}
+                        </div>
+                        <div class="form-floating mb-3">
+                            {{ form.title(class="form-control", value="%s" | format(school.title)) }}
+                            {{ form.title.label }}
+                        </div>
+                        <div class="form-floating mb-3">
+                            {{ form.department(class="form-control", value="%s" | format(school.department)) }}
+                            {{ form.department.label }}
+                        </div>
+                        <div class="form-floating mb-3">
+                            {{ form.description(class="form-control") }}
+                            {{ form.description.label }}
+                        </div>
+                        <div class="form-floating mb-3">
+                            {{ form.order(class="form-control", value="%s" | format(school.order)) }}
+                            {{ form.order.label }}
+                        </div>
                     </div>
-                    <div class="form-floating mb-3">
-                        {{ form.title(class="form-control", value="%s" | format(school.title)) }}
-                        {{ form.title.label }}
+                    <div class="card-footer text-center d-flex justify-content-between">
+                        <a href="{{ url_for('get_education') }}" class="btn btn-lg btn-danger">Cancel</a>
+                        {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
                     </div>
-                    <div class="form-floating mb-3">
-                        {{ form.department(class="form-control", value="%s" | format(school.department)) }}
-                        {{ form.department.label }}
-                    </div>
-                    <div class="form-floating mb-3">
-                        {{ form.description(class="form-control") }}
-                        {{ form.description.label }}
-                    </div>
-                    <div class="form-floating mb-3">
-                        {{ form.order(class="form-control", value="%s" | format(school.order)) }}
-                        {{ form.order.label }}
-                    </div>
-                </div>
-                <div class="card-footer text-center d-flex justify-content-between">
-                    <a href="{{ url_for('get_education') }}" class="btn btn-lg btn-danger">Cancel</a>
-                    {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
-                </div>
-            </form>
-        </div>
+                </form>
+            </div>
+        {% else %}
+            <div class="col">
+                    {% include "inc/no-results.html" %}
+            </div>
+        {% endif %}
     </section>
 {% endblock content %}
