--- a/templates/admin/edit_project.html
+++ b/templates/admin/edit_project.html
@@ -13,82 +13,88 @@
             </div>
         </div>
         <div class="row g-4">
-            <div class="col-md-7">
-                <div class="card">
-                    <form action="{{ url_for('edit_project', id=project._id) }}" method="POST">
-                        {{ form.csrf_token }}
-                        <div class="card-header">
-                            <h4 class="text-center">Edit</h4>
-                        </div>
-                        <div class="card-body">
-                            <div class="form-floating mb-3">
-                                {{ form.title(class="form-control", value="%s" | format(project.title)) }}
-                                {{ form.title.label }}
+            {% if project %}
+                <div class="col-md-7">
+                    <div class="card">
+                        <form action="{{ url_for('edit_project', id=project._id) }}" method="POST">
+                            {{ form.csrf_token }}
+                            <div class="card-header">
+                                <h4 class="text-center">Edit</h4>
                             </div>
-                            <div class="form-floating mb-3">
-                                {{ form.slug(class="form-control", readonly="readonly", value="%s" | format(project.slug)) }}
-                                {{ form.slug.label }}
-                            </div>
-                            <div class="form-floating mb-3">
-                                {{ form.tech(class="form-control", placeholder="Technologies Used", value="%s" | format(project.tech)) }}
-                                {{ form.tech.label }}
-                                <small class="text-muted">Separated by comma.</small>
-                            </div>
-                            <div class="form-floating mb-3">
-                                {{ form.repo(class="form-control", value="%s" | format(project.repo)) }}
-                                {{ form.repo.label }}
-                            </div>
-                            <div class="form-floating mb-3">
-                                {{ form.live_url(class="form-control", value="%s" | format(project.live_url)) }}
-                                {{ form.live_url.label }}
-                            </div>
-                            <div class="form-floating mb-3">
-                                {{ form.description(class="form-control") }}
-                                {{ form.description.label }}
-                            </div>
-                        </div>
-                        <div class="card-footer text-center d-flex justify-content-between">
-                            <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-danger">Cancel</a>
-                            {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="col-md-5">
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="text-center">Photos</h4>
-                    </div>
-                    <div class="card-body row justify-content-center g-2">
-                        <label for="current-photo">Current Photos:</label>
-                        <div id="gallery" class="row">
-                            {% for photo in project.photos %}
-                                <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ photo }}">
-                                    <a href="{{ photo }}"
-                                            class="projects-gallery">
-                                        <img class="img-thumbnail gallery-item"
-                                                src="{{ photo }}"
-                                                alt="Photo {{ loop.index }}">
-                                    </a>
-                                    <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
-                                        <i class="bi bi-trash-fill"></i>
-                                    </a>
+                            <div class="card-body">
+                                <div class="form-floating mb-3">
+                                    {{ form.title(class="form-control", value="%s" | format(project.title)) }}
+                                    {{ form.title.label }}
                                 </div>
-                            {% endfor %}
+                                <div class="form-floating mb-3">
+                                    {{ form.slug(class="form-control", readonly="readonly", value="%s" | format(project.slug)) }}
+                                    {{ form.slug.label }}
+                                </div>
+                                <div class="form-floating mb-3">
+                                    {{ form.tech(class="form-control", placeholder="Technologies Used", value="%s" | format(project.tech)) }}
+                                    {{ form.tech.label }}
+                                    <small class="text-muted">Separated by comma.</small>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    {{ form.repo(class="form-control", value="%s" | format(project.repo)) }}
+                                    {{ form.repo.label }}
+                                </div>
+                                <div class="form-floating mb-3">
+                                    {{ form.live_url(class="form-control", value="%s" | format(project.live_url)) }}
+                                    {{ form.live_url.label }}
+                                </div>
+                                <div class="form-floating mb-3">
+                                    {{ form.description(class="form-control") }}
+                                    {{ form.description.label }}
+                                </div>
+                            </div>
+                            <div class="card-footer text-center d-flex justify-content-between">
+                                <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-danger">Cancel</a>
+                                {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="text-center">Photos</h4>
                         </div>
-                        <div class="mb-3">
-                            <input type="hidden" id="collection" value="projects">
-                            <input type="hidden" id="doc-id" value="{{ project._id }}">
-                            <label for="drop-area" class="form-label">Add Photos</label>
-                            <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
-                            <div id="drop-area" data-multiple="true">
-                                <i class="bi bi-upload"></i>
-                                Drag&drop file here or click to select...
+                        <div class="card-body row justify-content-center g-2">
+                            <label for="current-photo">Current Photos:</label>
+                            <div id="gallery" class="row">
+                                {% for photo in project.photos %}
+                                    <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ photo }}">
+                                        <a href="{{ photo }}"
+                                                class="projects-gallery">
+                                            <img class="img-thumbnail gallery-item"
+                                                    src="{{ photo }}"
+                                                    alt="Photo {{ loop.index }}">
+                                        </a>
+                                        <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                            <i class="bi bi-trash-fill"></i>
+                                        </a>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                            <div class="mb-3">
+                                <input type="hidden" id="collection" value="projects">
+                                <input type="hidden" id="doc-id" value="{{ project._id }}">
+                                <label for="drop-area" class="form-label">Add Photos</label>
+                                <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
+                                <div id="drop-area" data-multiple="true">
+                                    <i class="bi bi-upload"></i>
+                                    Drag&drop file here or click to select...
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {% else %}
+                <div class="col">
+                    {% include "inc/no-results.html" %}
+                </div>
+            {% endif %}
         </div>
     </section>
 {% endblock content %}
