--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -17,48 +17,54 @@
                     data-bs-toggle="tooltip" data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a>
             </div>
         </div>
-        <div class="card">
-            <div class="card-header text-center">
-                <h4 class="text-center">List</h4>
+        {% if projects|length %}
+            <div class="card">
+                <div class="card-header text-center">
+                    <h4 class="text-center">List</h4>
+                </div>
+                <ul class="list-group list-group-flush">
+                    {% for project in projects %}
+                        <li class="list-group-item d-flex justify-content-between">
+                            <div class="row w-100 align-items-center">
+                                <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
+                                    {% if project.photos|length %}
+                                        <img src="{{ project.photos[0] }}"
+                                            alt="{{ project.title }}" class="img-fluid mb-1">
+                                        {% for photo in project.photos %}
+                                            {% if loop.index0 != 0 %}
+                                                <img src="{{ photo }}"
+                                                    alt="Photo {{ loop.index }}" class="w-25">
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% else %}
+                                        <i class="bi bi-display fs-1"></i>
+                                    {% endif %}
+                                </div>
+                                <div class="col-12 col-sm-10">
+                                    <h3 class="text-start">{{ project.title }}</h3>
+                                    <span class="fst-italic">Slug: {{ project.slug }}</span><br>
+                                    <small class="text-muted">Repo: {{ project.repo }}</small><br>
+                                    <small class="text-muted">URL: {{ project.live_url }}</small>
+                                    <p class="pt-2 fw-light">{{ project.description|truncate(250) }}</p>
+                                </div>
+                            </div>
+                            <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
+                                <a href="{{ url_for('get_project', project=project.slug) }}" class="btn btn-sm btn-accent"><i
+                                        class="bi bi-eye-fill"></i></a>
+                                <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i
+                                        class="bi bi-trash"></i></a>
+                                <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-light"><i
+                                        class="bi bi-pencil"></i></a>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <div class="card-footer"></div>
             </div>
-            <ul class="list-group list-group-flush">
-                {% for project in projects %}
-                    <li class="list-group-item d-flex justify-content-between">
-                        <div class="row w-100 align-items-center">
-                            <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
-                                {% if project.photos|length %}
-                                    <img src="{{ project.photos[0] }}"
-                                        alt="{{ project.title }}" class="img-fluid mb-1">
-                                    {% for photo in project.photos %}
-                                        {% if loop.index0 != 0 %}
-                                            <img src="{{ photo }}"
-                                                alt="Photo {{ loop.index }}" class="w-25">
-                                        {% endif %}
-                                    {% endfor %}
-                                {% else %}
-                                    <i class="bi bi-display fs-1"></i>
-                                {% endif %}
-                            </div>
-                            <div class="col-12 col-sm-10">
-                                <h3 class="text-start">{{ project.title }}</h3>
-                                <span class="fst-italic">Slug: {{ project.slug }}</span><br>
-                                <small class="text-muted">Repo: {{ project.repo }}</small><br>
-                                <small class="text-muted">URL: {{ project.live_url }}</small>
-                                <p class="pt-2 fw-light">{{ project.description|truncate(250) }}</p>
-                            </div>
-                        </div>
-                        <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
-                            <a href="{{ url_for('get_project', project=project.slug) }}" class="btn btn-sm btn-accent"><i
-                                    class="bi bi-eye-fill"></i></a>
-                            <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i
-                                    class="bi bi-trash"></i></a>
-                            <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-light"><i
-                                    class="bi bi-pencil"></i></a>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
-            <div class="card-footer"></div>
-        </div>
+        {% else %}
+            <div class="col">
+                {% include "inc/no-results.html" %}
+            </div>
+        {% endif %}
     </section>
 {% endblock content %}
