--- a/templates/blog.html
+++ b/templates/blog.html
@@ -32,37 +32,43 @@
         <div class="container-xl">
             {% include "inc/breadcrumbs.html" %}
             <div class="row row-cols-1">
-                {% for blog in blogs %}
-                    <div class="col">
-                        <div class="card card-blogs">
-                            <div class="row">
-                                {% if blog.photos|length %}
-                                    <div class="col-12 col-md-4 text-center">
-                                        <img src="{{ blog.photos[0] }}"
-                                            alt="{{ blog.title }}" class="img-fluid">
-                                    </div>
-                                    <div class="card-blogs-body col-12 col-md-8">
-                                {% else %}
-                                    <div class="card-blogs-body col-12">
-                                {% endif %}
-                                    <div class="card-body">
-                                        <h2 class="card-title">{{ blog.title }}</h2>
-                                        <div class="post-body">{{ blog.body|safe }}</div>
-                                        <p class="card-text"><small class="text-muted">{{ blog.added_on }}</small></p>
-                                    </div>
-                                    <div class="card-footer text-end">
-                                        {% if session['user'] %}
-                                            <a href="{{ url_for('edit_blog', id=blog._id) }}" class="btn btn-sm btn-accent-light float-start m-2"><i class="bi bi-pencil"></i></a>
-                                            <a href="{{ url_for('delete_blog', id=blog._id) }}" class="btn btn-sm btn-danger confirm float-start m-2"><i class="bi bi-trash"></i></a>
-                                        {% endif %}
-                                        <a href="{{ url_for('get_post', post=blog.slug) }}"
-                                            class="btn btn-sm btn-accent bg-accent">Read More ...</a>
+                {% if blogs|length %}
+                    {% for blog in blogs %}
+                        <div class="col">
+                            <div class="card card-blogs">
+                                <div class="row">
+                                    {% if blog.photos|length %}
+                                        <div class="col-12 col-md-4 text-center">
+                                            <img src="{{ blog.photos[0] }}"
+                                                alt="{{ blog.title }}" class="img-fluid">
+                                        </div>
+                                        <div class="card-blogs-body col-12 col-md-8">
+                                    {% else %}
+                                        <div class="card-blogs-body col-12">
+                                    {% endif %}
+                                        <div class="card-body">
+                                            <h2 class="card-title">{{ blog.title }}</h2>
+                                            <div class="post-body">{{ blog.body|safe }}</div>
+                                            <p class="card-text"><small class="text-muted">{{ blog.added_on }}</small></p>
+                                        </div>
+                                        <div class="card-footer text-end">
+                                            {% if session['user'] %}
+                                                <a href="{{ url_for('edit_blog', id=blog._id) }}" class="btn btn-sm btn-accent-light float-start m-2"><i class="bi bi-pencil"></i></a>
+                                                <a href="{{ url_for('delete_blog', id=blog._id) }}" class="btn btn-sm btn-danger confirm float-start m-2"><i class="bi bi-trash"></i></a>
+                                            {% endif %}
+                                            <a href="{{ url_for('get_post', post=blog.slug) }}"
+                                                class="btn btn-sm btn-accent bg-accent">Read More ...</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="col">
+                        {% include "inc/no-results.html" %}
                     </div>
-                {% endfor %}
+                {% endif %}
             </div>
         </div>
         </div>
