--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -32,38 +32,44 @@
         <div class="container-xl">
             {% include "inc/breadcrumbs.html" %}
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
-                {% for project in projects %}
-                    <div class="col">
-                        <div class="card card-project h-100">
-                            {% if project.photos|length %}
-                                <a href="{{ url_for('get_project', project=project.slug) }}"><img src="{{ project.photos[0] }}" class="card-img-top" alt="{{ project.title }}"></a>
-                            {% endif %}
-                            <div class="card-body">
-                                <h5 class="card-title"><a href="{{ url_for('get_project', project=project.slug) }}">{{ project.title }}</a></h5>
-                                <p class="card-text">{{ project.description|truncate(80, True, ' ...') }}</p>
+                {% if projects|length %}
+                    {% for project in projects %}
+                        <div class="col">
+                            <div class="card card-project h-100">
+                                {% if project.photos|length %}
+                                    <a href="{{ url_for('get_project', project=project.slug) }}"><img src="{{ project.photos[0] }}" class="card-img-top" alt="{{ project.title }}"></a>
+                                {% endif %}
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="{{ url_for('get_project', project=project.slug) }}">{{ project.title }}</a></h5>
+                                    <p class="card-text">{{ project.description|truncate(80, True, ' ...') }}</p>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">{{ project.tech }}</li>
+                                    {% if project.repo %}
+                                        <li class="list-group-item d-grid"><a href="{{ project.repo }}" target="_blank"
+                                            class="btn btn-sm btn-dark"> <i class="bi bi-github"></i> Source</a></li>
+                                    {% endif %}
+                                    {% if project.live_url %}
+                                        <li class="list-group-item d-grid"><a href="{{ project.live_url }}" target="_blank"
+                                            class="btn btn-sm btn-accent-light"><i class="bi bi-display"></i> Demo</a></li>
+                                    {% endif %}
+                                    <li class="list-group-item d-grid"><a href="{{ url_for('get_project', project=project.slug) }}"
+                                            class="btn btn-sm btn-accent"><i class="bi bi-info-circle-fill"></i> Details</a></li>
+                                    {% if session['user'] %}
+                                        <li class="list-group-item d-flex justify-content-evenly">
+                                            <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
+                                            <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i class="bi bi-trash"></i></a>
+                                        </li>
+                                    {% endif %}
+                                </ul>
                             </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">{{ project.tech }}</li>
-                                {% if project.repo %}
-                                    <li class="list-group-item d-grid"><a href="{{ project.repo }}" target="_blank"
-                                        class="btn btn-sm btn-dark"> <i class="bi bi-github"></i> Source</a></li>
-                                {% endif %}
-                                {% if project.live_url %}
-                                    <li class="list-group-item d-grid"><a href="{{ project.live_url }}" target="_blank"
-                                        class="btn btn-sm btn-accent-light"><i class="bi bi-display"></i> Demo</a></li>
-                                {% endif %}
-                                <li class="list-group-item d-grid"><a href="{{ url_for('get_project', project=project.slug) }}"
-                                        class="btn btn-sm btn-accent"><i class="bi bi-info-circle-fill"></i> Details</a></li>
-                                {% if session['user'] %}
-                                    <li class="list-group-item d-flex justify-content-evenly">
-                                        <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
-                                        <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i class="bi bi-trash"></i></a>
-                                    </li>
-                                {% endif %}
-                            </ul>
                         </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="col">
+                        {% include "inc/no-results.html" %}
                     </div>
-                {% endfor %}
+                {% endif %}
             </div>
         </div>
     </section>
