--- a/templates/project.html
+++ b/templates/project.html
@@ -29,72 +29,78 @@
         </svg>
         <div class="container-xl">
             {% include "inc/breadcrumbs.html" %}
-            <div class="row mb-4">
-                <div class="col">
-                    {% if session['user'] %}
-                        <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-danger confirm mx-2 float-end"><i class="bi bi-trash"></i></a>
-                        <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-accent-light float-end"><i class="bi bi-pencil"></i></a>
-                    {% endif %}
-                    <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i
-                            class="bi bi-arrow-left-circle"></i> Go
-                        back</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <figure>
-                        {% if project.photos|length %}
-                            <a href="{{ project.photos[0] }}"
-                                class="{{ project.slug }}-gallery">
-                                <img src="{{ project.photos[0] }}"
-                                    alt="{{ project.title }}" class="project-main-photo gallery-item">
-                            </a>
-                        {% else %}
-                            <img src="{{ url_for('static', filename='images/no-photo.jpg') }}"
-                                    alt="{{ project.title }}" class="project-main-photo gallery-item">
-                        {% endif %}
-                    </figure>
-                </div>
-                <div class="col-12 col-md-6">
-                    <h3 class="project-title">{{ project.title }}</h3>
-                    <div class="d-grid gap-3 d-sm-flex">
-                        {% if project.repo %}
-                            <a href="{{ project.repo }}" target="_blank" class="btn btn-dark w-100"> <i
-                                class="bi bi-github"></i> Source</a>
-                        {% endif %}
-                        {% if project.live_url %}
-                            <a href="{{ project.live_url }}" target="_blank" class="btn btn-accent-light w-100"><i
-                                class="bi bi-display"></i> Demo</a>
-                        {% endif %}
-                    </div>
-                    <div class="project-tech">
-                        <h4>Technologies</h4>
-                        <p>
-                            {% set technologies = project.tech.split(',') %}
-                            {% for tech in technologies %}
-                                <span class="badge rounded-pill bg-accent">{{ tech }}</span>
-                            {% endfor %}
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 project-description">
-                    <h4>Description</h4>
-                    <p>{{ project.description }}</p>
-                </div>
-            </div>
-            {% if project.photos|length <= 1 %}
-                <div class="row">
+            {% if project %}
+                <div class="row mb-4">
                     <div class="col">
-                        <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i class="bi bi-arrow-left-circle"></i> Go
+                        {% if session['user'] %}
+                            <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-danger confirm mx-2 float-end"><i class="bi bi-trash"></i></a>
+                            <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-accent-light float-end"><i class="bi bi-pencil"></i></a>
+                        {% endif %}
+                        <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i
+                                class="bi bi-arrow-left-circle"></i> Go
                             back</a>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <figure>
+                            {% if project.photos|length %}
+                                <a href="{{ project.photos[0] }}"
+                                    class="project-gallery">
+                                    <img src="{{ project.photos[0] }}"
+                                        alt="{{ project.title }}" class="project-main-photo gallery-item">
+                                </a>
+                            {% else %}
+                                <img src="{{ url_for('static', filename='images/no-photo.jpg') }}"
+                                        alt="{{ project.title }}" class="project-main-photo gallery-item">
+                            {% endif %}
+                        </figure>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h3 class="project-title">{{ project.title }}</h3>
+                        <div class="d-grid gap-3 d-sm-flex">
+                            {% if project.repo %}
+                                <a href="{{ project.repo }}" target="_blank" class="btn btn-dark w-100"> <i
+                                    class="bi bi-github"></i> Source</a>
+                            {% endif %}
+                            {% if project.live_url %}
+                                <a href="{{ project.live_url }}" target="_blank" class="btn btn-accent-light w-100"><i
+                                    class="bi bi-display"></i> Demo</a>
+                            {% endif %}
+                        </div>
+                        <div class="project-tech">
+                            <h4>Technologies</h4>
+                            <p>
+                                {% set technologies = project.tech.split(',') %}
+                                {% for tech in technologies %}
+                                    <span class="badge rounded-pill bg-accent">{{ tech }}</span>
+                                {% endfor %}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 project-description">
+                        <h4>Description</h4>
+                        <p>{{ project.description }}</p>
+                    </div>
+                </div>
+                {% if project.photos|length <= 1 %}
+                    <div class="row">
+                        <div class="col">
+                            <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i class="bi bi-arrow-left-circle"></i> Go
+                                back</a>
+                        </div>
+                    </div>
+                {% endif %}
+            {% else %}
+                <div class="col">
+                    {% include "inc/no-results.html" %}
                 </div>
             {% endif %}
         </div>
     </section>
-    {% if project.photos|length > 1 %}
+    {% if project and project.photos|length > 1 %}
         <section id="project-gallery">
             <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
             <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
@@ -114,7 +120,7 @@
                             <div class="col">
                                 <figure>
                                     <a href="{{ photo }}"
-                                        class="{{ project.slug }}-gallery"><img
+                                        class="project-gallery"><img
                                             src="{{ photo }}"
                                             alt="Photo {{ loop.index }}" class="gallery-item"></a>
                                 </figure>
@@ -141,6 +147,6 @@
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
     <!-- CREDIT: https://github.com/biati-digital/glightbox -->
     <script type="text/javascript">
-        const lightbox = GLightbox({ 'selector': '.{{ project.slug }}-gallery' });
+        const lightbox = GLightbox({ 'selector': '.project-gallery' });
     </script>
 {% endblock scripts %}
