refactor: rearange landing page to show experience before education and re-order skills by percentge

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -486,10 +486,6 @@ nav[aria-label="breadcrumb"] {
 
 /*------------------------------------------ EDUCATION */
 
-#education {
-    background-color: var(--accent-light);
-}
-
 #education .section-title {
     margin-top: -1rem;
 }
@@ -530,6 +526,10 @@ nav[aria-label="breadcrumb"] {
 }
 
 /*------------------------------------------ EXPERIENCE */
+
+#experience {
+    background-color: var(--accent-light);
+}
 
 #experience .section-title {
     margin-top: -1rem;
