--- a/static/css/style.css
+++ b/static/css/style.css
@@ -665,6 +665,7 @@ nav[aria-label="breadcrumb"] {
     font-size: 1.2rem;
     font-weight: 500;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, .3);
+    margin: 0 .5rem .5rem 0;
 }
 
 .project-main-photo {
