--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -28,6 +28,10 @@
                         {{ form.slug.label }}
                     </div>
                     <div class="form-floating mb-3">
+                        {{ form.year(class="form-control", placeholder="Year") }}
+                        {{ form.year.label }}
+                    </div>
+                    <div class="form-floating mb-3">
                         {{ form.tech(class="form-control", placeholder="Technologies Used") }}
                         {{ form.tech.label }}
                         <small class="text-muted">Separated by comma.</small>
